ADD: some error handling to the tests